--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -24,7 +24,7 @@
                     </div>
  
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-8">
                     <div class="job_sumary">
                         <div class="summery_header">
                             <h3>Profile Summery</h3>
@@ -32,7 +32,7 @@
                         <div class="job_content">
                             <ul>
                                 <li>{{profile}}</span></li>
-                                <li>Email: <span>{{profile.user.email}} Position</span></li>
+                                <li>Email: <span>{{profile.user.email}}</span></li>
                                 <li>Phone: <span>{{profile.phone_number}}</span></li>
                                 <li>Location: <span>California, USA</span></li>
                                 
