--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -6,6 +6,7 @@
         <form action="" method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
+        <input type="submit" class="btn btn-default btn-lg boxed-btn3 w-100" value="Reset password">
         </form>
     {% else %}
         <h1>Password reset failed</h1>
