--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -12,9 +12,9 @@
                                 </a>
                             </div>
                             <p>
-                                finloan@support.com <br>
-                                +10 873 672 6782 <br>
-                                600/D, Green road, NewYork
+                                ahmed211044@gmail.com <br>
+                                01007274160 <br>
+                                Mansoura,Egypt
                             </p>
                             <div class="socail_links">
                                 <ul>
