--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -19,7 +19,7 @@
                             <div class="socail_links">
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.facebook.com/albyana11">
                                             <i class="ti-facebook"></i>
                                         </a>
                                     </li>
@@ -29,12 +29,12 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://twitter.com/AHMEDLOTFY25?fbclid=IwAR0EvxYvlKuYsYM_NIHXUAZruHplb9BNz4GWaG7ept5ui26xNMGbRA8i2dk">
                                             <i class="fa fa-twitter"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.instagram.com/ahmed_lotfy5557/?fbclid=IwAR0DrpQM3A8EdeRs3ndOjNJWGpPYGiBHXILUIUvAqzD4CjoW78v7DLFKGu4">
                                             <i class="fa fa-instagram"></i>
                                         </a>
                                     </li>
