--- a/templates/job_list.html
+++ b/templates/job_list.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text">
-                        <h3>+Jobs Available</h3>
+                        <h3>Jobs Available</h3>
                     </div>
                 </div>
             </div>
