--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -21,7 +21,7 @@
     <input class="boxed-btn3 w-100" type="submit" value="login" />
    
   </form>
-
+  <p><a href="{% url 'signup' %}">SignUp?</a></p>
   {# Assumes you setup the password_reset view in your URLconf #}
   <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
