--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -18,11 +18,12 @@
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input class="boxed-btn3 w-100" type="submit" value="login" />
+    <input class="boxed-btn3 w-100 bt-2" type="submit" value="login" />
    
   </form>
-  <p><a href="{% url 'signup' %}">SignUp?</a></p>
+
   {# Assumes you setup the password_reset view in your URLconf #}
   <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  <input class="boxed-btn3 w-100 " type="submit" value="signup" />
 
 {% endblock %}
